platzi coding challenge dia 6

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>PlatziCodingChallenge</title>
 </head>
 <body>
-    <!-- <script src="PlatziCodingChallenge_Dia5/EliminarVocales.js"></script> -->
+    <script src="PlatziCodingChallenge_Dia6/Calculadora.js"></script>
 </body>
 </html>
