--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>PlatziCodingChallenge</title>
 </head>
 <body>
-    <script src="PlatziCodingChallenge_Dia7/PiedraPapelTijera.js"></script>
+    <!-- <script src="PlatziCodingChallenge_Dia8/VolumenCilindro.js"></script> -->
 </body>
 </html>
