--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>PlatziCodingChallenge</title>
 </head>
 <body>
-    <!-- <script src="PlatziCodingChallenge_Dia24/InteresCompuesto3.js"></script> -->
+    <script src="PlatziCodingChallenge_Dia26/OrdenandoAndo2.js"></script>
 </body>
 </html>
