platzi coding challenge dia 27

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>PlatziCodingChallenge</title>
 </head>
 <body>
-    <script src="PlatziCodingChallenge_Dia26/OrdenandoAndo2.js"></script>
+    <h1>PlatziCodingChallenge</h1>
+    <!-- <script src="PlatziCodingChallenge_Dia27/OrdenandoAndo3.js"></script> -->
 </body>
 </html>
