--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>PlatziCodingChallenge</h1>
-    <!-- <script src="PlatziCodingChallenge_Dia27/OrdenandoAndo3.js"></script> -->
+    <script src="PlatziCodingChallenge_Dia28/CodigoMorse.js"></script>
 </body>
 </html>
