platzi coding challenge dia 64

--- a/PlatziCodingChallenge_Dia64/index.html
+++ b/PlatziCodingChallenge_Dia64/index.html
@@ -18,7 +18,7 @@
       <div class="info-container">
         <h2>Estado del elevador</h2>
         <p>Piso: <span id="elevator-number">0</span></p>
-        <p>Dirección: <span>Quieto</span></p>
+        <p>Dirección: <span id="elevator-state">Quieto</span></p>
       </div>
       <div class="floors-container">
         <div class="floor">
